--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -6,6 +6,7 @@
     border-bottom: 1px solid var(--bg-outline);
     align-items: center;
     position: fixed;
+    z-index: 999;
     padding: 2rem 8rem;
     display: flex;
     width: 100%;
@@ -17,6 +18,7 @@
     border-bottom: 1px solid var(--bg-outline);
     align-items: center;
     position: fixed;
+    z-index: 999;
     padding: 2rem 2rem;
     display: flex;
     width: 100%;
@@ -47,7 +49,7 @@
     transition: transform 0.25s cubic-bezier(.4,0,.2,1);
     transform: translateX(-100%);
     position: fixed;
-    z-index: 2000;
+    z-index: 999;
     display: flex;
     height: 100vh;
     width: 100%;
